﻿更新履歴

==== Ver 1.1.5-beta1(2013/xx/xx)
 * NEW: ディスプレイのDPI設定に応じて適切にスケーリングが行われます
 * NEW: OpenTween派生クライアントなどから設定ファイルをコピーした場合に、存在しない設定を削除せず保持するようになります
 * NEW: タブやボタン等のフォントにシステムのUIフォントが使用されます
   - リストや発言詳細欄のフォント設定は変更されないため設定画面から手動で変更して下さい
 * FIX: 取得したプロフィール画像が壊れていた場合のエラー処理を改善 (thx @7mencho!)
 * FIX: サムネイル情報の取得に失敗した場合のエラー処理を改善
 * FIX: 設定ファイルの保存に失敗すると設定ファイルが空になる問題を修正

==== Ver 1.1.4(2013/10/19)
 * CHG: タブ振り分けルールでのスクリーン名に対するヒット条件が、「複合条件」では完全一致、「単一条件」では部分一致となっていたため完全一致に統一
 * FIX: 取得したプロフィール画像が壊れていた場合にOpenTweenが異常終了してしまう問題の修正 (thx @5px, @selvaggio!)
 * FIX: 取得した画像が壊れていた場合にメモリリークを起こす可能性のある箇所の修正 (thx @5px!)
 * FIX: タブ振り分けルールの「単一条件」が公式RTした人のスクリーン名に対してヒットしない問題の修正 (thx @Shoichi_Kublai!)

==== Ver 1.1.3(2013/10/11)
 * タブ振り分けルールの挙動が若干変わりました
 * 基本的には Tween の Wiki に記載されている挙動に忠実にしたものですが、一部利用者には影響があるかもしれません
 * http://sourceforge.jp/projects/tween/wiki/%E3%82%BF%E3%83%96%E6%8C%AF%E3%82%8A%E5%88%86%E3%81%91%E3%83%AB%E3%83%BC%E3%83%AB

 * CHG: Twitter API のエラー処理を改善
 * CHG: 旧 API v1 関連の機能を削除
 * CHG: タブ振り分けルールの処理を改善
   - 除外ルールが単独で指定された場合 (マッチルールが空欄) でなくても除外ルールがタブ全体への例外指定として作用してしまう挙動を修正
   - (正規表現無効時) 除外ルールの「発言内容」を半角スペース区切りで複数指定したときに AND 条件ではなく OR 条件として判定してしまう挙動を修正
   - URL 検索が有効の時は Source を完全一致ではなく部分一致でマッチするように修正
 * CHG: 全てのHTTPリクエストに適切なUser-Agentヘッダを付けるよう修正
 * CHG: 短縮URLの「すべてのURLについて解決を試みる」機能を削除
 * FIX: 「片思いユーザーリストを取得する」を無効にするとRT非表示設定が反映されない問題の修正 (thx @ui_nyan!)
 * FIX: ブロックされているユーザーのツイートをふぁぼった時にUserStreamsが切断されてしまう問題の修正
 * FIX: 片思いユーザーリストの更新に失敗すると希に片思い表示がされなくなる現象を修正
 * FIX: ブロック中のユーザーリストが正しく取得できていなかった問題の修正
 * FIX: 画像付きポストを行う際にアップローダーが Twitpic もしくは yfrog の場合、ツイートに reply_to が付加されない問題を修正
 * FIX: タブ削除の取消機能で関連発言タブを復元するとそれ以降関連発言表示が出来なくなる問題を修正 (thx @5px!)
 * FIX: アイコン取得やサムネイル表示等でプロキシ設定が適用されない問題を修正
 * FIX: タブ振り分けルール設定時にマッチ条件などの末端の空白文字が削除される問題を修正

 * v1.1.5 にて OpenTween のデフォルト設定の変更を検討しています
 * 興味のある方は下記 URL を参照して下さい
 * http://sourceforge.jp/forum/forum.php?thread_id=33989&forum_id=27648

==== Ver 1.1.2(2013/07/06)
 * NEW: 画像アップロード対応サービスについっぷるフォトを追加
 * CHG: 画像アップロード対応サービスから Lockerz を削除 (API廃止のため)