@@ -3,8 +3,10 @@
 ==== Ver 1.1.5-beta1(2013/xx/xx)
  * NEW: ディスプレイのDPI設定に応じて適切にスケーリングが行われます
  * NEW: OpenTween派生クライアントなどから設定ファイルをコピーした場合に、存在しない設定を削除せず保持するようになります
- * NEW: タブやボタン等のフォントにシステムのUIフォントが使用されます
-   - リストや発言詳細欄のフォント設定は変更されないため設定画面から手動で変更して下さい
+ * NEW: タブやボタン等のUIに任意のフォントを指定できます
+   - フォントによっては一部レイアウトが崩れるため隠し設定にしています
+   - SettingLocal.xml に <FontUIGlobalStr>Meiryo UI, 9pt</FontUIGlobalStr> のように記述することで使えます
+   - 「メイリオ」のように日本語のフォント名を指定する場合は UTF-8 で保存するのを忘れずに
  * FIX: 取得したプロフィール画像が壊れていた場合のエラー処理を改善 (thx @7mencho!)
  * FIX: サムネイル情報の取得に失敗した場合のエラー処理を改善
  * FIX: 設定ファイルの保存に失敗すると設定ファイルが空になる問題を修正
